--- a/src/Web/packages.config
+++ b/src/Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Castle.Core" version="3.2.2" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net451" />
   <package id="Castle.Windsor.Mvc" version="1.3.0.0" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="lodash" version="2.4.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
